Fri Oct  2 14:46:41 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/CSD_Strategy_Tests/TP_Test_2/run_test.pl:
        * tests/CSD_Strategy_Tests/TP_Test_3/run_test.pl:
          Resolved some fuzz errors.

Fri Oct  2 14:07:11 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/CSD_Strategy_Tests/TP_Test_2/run_test.pl:
        * tests/CSD_Strategy_Tests/TP_Test_3/run_test.pl:
          Resolved some fuzz errors.

Fri Oct  2 14:01:21 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled some tests for ce/labview/fuzz

        * tests/CSD_Strategy_Tests/TP_Test_3/run_test.pl:
          Converted to the new test framework

Fri Oct  2 13:25:28 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled some tests for ce/labview/fuzz

        * tests/CSD_Strategy_Tests/TP_Test_2/run_test.pl:
          Converted to the new test framework

Fri Oct  2 11:33:29 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled some tests for ce/labview/fuzz

        * tests/CodeSets/simple/run_test.pl:
        * tests/Hang_Shutdown/run_test.pl:
          Converted to the new test framework

Fri Oct  2 11:05:10 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled some tests for ce/labview/fuzz

        * tests/TransportCurrent/Framework/run_test.pl:
        * tests/TransportCurrent/IIOP/run_test.pl:
          Converted to the new test framework

Fri Oct  2 09:12:20 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled Bug_3154_Regression for ce/labview/fuzz

        * tests/HandleExhaustion/run_test.pl:
        * tests/OBV/Collocated/Forward/run_test.pl:
        * tests/OBV/TC_Alignment/run_test.pl:
          Converted to the new test framework

Fri Oct  2 08:35:27 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_2735_Regression/run_test.pl: