@@ -1,3 +1,8 @@
+Fri Oct  2 14:52:17 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * tests/Bug_2735_Regression/run_test.pl:
+          Resolved some fuzz warnings.
+
 Fri Oct  2 14:46:41 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
         * tests/CSD_Strategy_Tests/TP_Test_2/run_test.pl:
